added all the html files to git ignore

--- a/public/index.jade
+++ b/public/index.jade
@@ -8,6 +8,7 @@ html(ng-app="MyApp")
 	body
 		.container 
 			div(ui-view) 
+			p hello all
 		script(type="text/javascript" src="bower_components/angular/angular.js")
 		script(type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js")
 		script(type="text/javascript" src="development/js/mainapp.js")
